# RPA_BOSS-

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DRIISSIONPAGE_FIXES.md  IMPLEMENTATION_SUMMARY.md  PORT_UPDATE.md  README.md  SCRIPTS_README.md  STARTUP_WARNINGS.md  app.pid  install.bat  kill_all.bat  kill_all_quick.bat  restart_all.bat  start.bat  start_all.bat
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  account_groups.py  accounts.py  auth.py  hr.py  jobs.py  logs.py  reply_rules.py  resumes.py  tasks.py  websocket_logs.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  responses.py
backend/app/schemas/: __init__.py  account.py  job.py  task.py
backend/app/services/: __init__.py  account_group_service.py  account_merge_service.py  account_service.py  account_sync_service.py  hr_service.py  job_service.py  reply_engine.py  rpa_service.py  task_executor.py  task_service.py
backend/migrations/: 001_create_sessions.sql  002_create_login_logs.sql  003_add_account_type.sql  004_create_candidates.sql  005_create_hr_jobs.sql  006_create_communications.sql  007_create_received_resumes.sql  008_create_auto_reply_rules.sql  009_add_account_sessions.sql  010_fix_candidates_unique.sql  011_enhance_account_management.sql  012_add_account_sync_fields.sql
backend/rpa/: __init__.py
backend/rpa/core/: __init__.py  base.py  browser.py
backend/rpa/modules/: __init__.py  anti_detection.py  (+3 more)
backend/scripts/: explore_user_info.py  migrate_mongodb_to_sqlite.py
(+154 files in other folders)
